IE7 footer menu inline-block fix; added spacing between document list items

--- a/style.css
+++ b/style.css
@@ -89,6 +89,8 @@ select#UCFHBHeaderLinks {
 
 #footer {line-height: 14px; color: #000; font-size: 11px; font-family: Helvetica, Arial, sans-serif; border-top: none; text-align: center; margin-left: auto; margin-right: auto;}
 #footer-menu li {float: none;}
+*+html #footer-menu { width: 700px; } /* IE7 float fix */
+*+html #footer-menu li { float: left; } /* IE7 float fix */
 #footer a {color: #000; font-size: 11px; font-family: Helvetica, Arial, sans-serif;}
 #footer-menu li:after {content: "|";}
 #footer-widget-wrap { margin-top: 16px; }
@@ -204,7 +206,7 @@ article h3, h4{margin-top: 20px;}
  * Document Search
  **/
 .document-list ul {list-style-type: none;}
-.document-list ul li {}
+.document-list ul li {padding-bottom:10px;}
 .document-list ul li.pdf {list-style-image: url('static/img/documents-pdf.png');}
 .document-list ul li.word {list-style-image: url('static/img/documents-word.png');}
 .document-list ul li.document {list-style-image: url('static/img/documents-doc.png');}
